Bug 350313 - Impossible to delete entity with check constraint
Summary: Impossible to delete entity with check constraint
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.16.3 (KDE Applications 15.04.3)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-17 11:27 UTC by Ralf Habacker
Modified: 2015-07-17 11:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.16.80 (KDE Applications 15.7.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-07-17 11:27:47 UTC
It is not possible to delete an entity having a check constraint after a save/load cycle

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. add entity with check constraint
3. save and reload file
4. delete entity from the tree view

Actual Results:  
A message is printed "The folder must emptied before it can be deleted" and deletion is canceled.


Expected Results:  
The entity should be deleted.

It looks that on load check constraints are added as child objects of the entity instead of appending to UMLEntity::m_List by using addConstraint().
Comment 1 Ralf Habacker 2015-07-17 11:40:34 UTC
Git commit 4d801bcc0916739a7cbe10a7296d4526106c6937 by Ralf Habacker.
Committed on 17/07/2015 at 11:40.
Pushed by habacker into branch 'master'.

Fix 'Impossible to delete entity with check constraint'.
FIXED-IN:2.16.80 (KDE Applications 15.7.80)

M  +1    -1    umbrello/umlobject.cpp

http://commits.kde.org/umbrello/4d801bcc0916739a7cbe10a7296d4526106c6937