Fix 'Impossible to delete entity with check constraint'.

BUG:350313
FIXED-IN:2.16.80 (KDE Applications 15.7.80)